[package]
name = "jsonschema-typst"
version = "0.0.1"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.3.4", default-features = false }
jsonschema = { version = "0.33", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
wasm-minimal-protocol = { git = "https://github.com/astrale-sharp/wasm-minimal-protocol", tag = "wasi-stub-0.2.0" }

[profile.release]
lto = true          # Enable link-time optimization
strip = true        # Strip symbols from binary*
opt-level = 'z'     # Optimize for size
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic

